# flask-nuxtjs

./: README.md  pyproject.toml
app/: __init__.py  config.py
app/api/common/auth/: __init__.py
app/api/v1/: sensors.py
app/frontend/: README.md  package-lock.json  package.json
