[tool.poetry]
name = "flask-nuxtjs"
version = "0.1.0"
description = ""
authors = ["christian espinoza <chespinoza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
environs = "^7.1.0"
python-jose = "^3.1.0"
python-jose-cryptodome = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
